Mapsicle API v1.1 - 18 December 2009
====================================

* fix stylesheet autoloading for packed version of Mapsicle
* update auto-resizing for cases where outer container is not set to an explicit pixel size
* account for borders on outer container when resizing panorama
* make latlng in Mapsicle constructor optional: waits for you to call setPosition if no latlng given
* overlayAnchor for all SVOverlays gives a position on overlay to be anchored to Street View (defaults to original behaviour: the centre)
* Mapsicle now automatically loads stylesheet from the same path as mapsicle.js is loaded from
* fixed Mapsicle#getLocations()

Mapsicle API v1.0 - 13 November 2009
====================================

* altered Mapsicle constructor: first paramter is now "container", a DOM element, rather than an ID.
* removed Mapsicle#addStaticOverlay, Mapsicle#clearStaticOverlays, Mapsicle#removeStaticOverlay and SVDecal

Mapsicle API v0.9.8 - 9 October 2009
====================================

* removed Mapsicle#registerCallback. You should use GEvent.addListener to register callbacks for events.

Mapsicle API v0.9.7 - 8 October 2009
====================================

* Mapsicle#endStreetView renamed to close
* SVTrackingOverlay#tracking renamed to getLocation
* MapsicleConfig renamed to MapsicleParams
* fix height and width setting in Custom Info Windows, so example should now work in IE
* ugly partial fix for markers not showing up in Chrome
* fixed everything-is-broken-in-Internet-Explorer issue
* use visibility: hidden rather than display: none to hide overlays during drag to fix issue with YouTube player being reloaded

Mapsicle API v0.9.1 - 14 September 2009       
=======================================

* fixed z-index for SVCustomInfoWindow so it shows up over the top of markers, as SVMiniInfoBox does

Mapsicle API v0.9.0 - 14 September 2009
=======================================

* restyled to Google coding conventions
* first public release
